--- a/src/theme/Flash.css
+++ b/src/theme/Flash.css
@@ -19,8 +19,8 @@
   opacity: 0;
 }
 .flash .explode.explode-card {
-  width: 15vmin;
-  height: 15vmin;
+  width: 5.375rem;
+  height: 5.375rem;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -30,16 +30,16 @@
   opacity: 0;
 }
 
-.flash .explode:before {
+.flash .explode::before {
   content: '';
-  background-image: url('../assets/images/flash-sprite.png');
+  background-image: url('../assets/images/sprites/flash-sprite.png');
   position: absolute;
   z-index: 100;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-size: 600% 600%; /* 6 frames horizontally and vertically */
+  background-size: 500% 500%; /* 5 frames horizontally and vertically */
   background-position: 0 0%; /* Initial positioning */
   background-repeat: no-repeat;
   max-width: 100%;
@@ -53,11 +53,41 @@
     explode 0.5s steps(6) forwards,
     explode-filters 0.5s forwards;
 }
+.flash.active .explode.explode-earth {
+  opacity: 1;
+  animation:
+    explode-earth 0.5s steps(3) linear,
+    explode-filters 0.5s forwards;
+}
 
-.flash.active .explode:before {
+.flash.active .explode::before {
   opacity: 1;
   animation: explode 0.5s steps(6) forwards;
 }
+
+.flash.active .explode.explode-earth::before {
+  opacity: 1;
+  animation:
+    explode-earth 0.5s steps(3) forwards,
+    explode-filters 0.5s forwards;
+}
+
+.flash.active.number-btn {
+  position: relative;
+  width: 15vmin;
+  height: 15vmin;
+  background: transparent;
+  box-shadow: none;
+}
+
+.flash.active.number-btn::before {
+  content: '';
+  border: none;
+  background-image: none;
+  background: transparent;
+  box-shadow: none;
+}
+
 @keyframes explode {
   0% {
     background-position: 0 0; /* 1st frame 1st row */
@@ -87,7 +117,25 @@
     background-position: -333.33px -333.33px; /* 3rd frame of 3rd row */
   }
   100% {
-    background-position: -500px -333.33px; /* 6th frame of 3rd row */
+    background-position: -500px -333.33px; /* 1st frame of 3rd row */
+  }
+}
+
+@keyframes explode-earth {
+  0% {
+    background-position: 0 0; /* 1st frame, 1st row */
+  }
+  25% {
+    background-position: -166.66px 0; /* 2nd frame, 1st row */
+  }
+  50% {
+    background-position: -333.32px 0; /* 3rd frame, 1st row */
+  }
+  75% {
+    background-position: -166.66px 0; /* 2nd frame, 1st row */
+  }
+  100% {
+    background-position: 0 0; /* 1st frame, 1st row */
   }
 }
 
