--- a/src/theme/tailwind.css
+++ b/src/theme/tailwind.css
@@ -640,11 +640,23 @@ video {
 .mb-4 {
   margin-bottom: 1rem;
 }
+.ml-2 {
+  margin-left: 0.5rem;
+}
 .mt-4 {
   margin-top: 1rem;
 }
-.ml-2 {
-  margin-left: 0.5rem;
+.mr-2 {
+  margin-right: 0.5rem;
+}
+.mb-14 {
+  margin-bottom: 3.5rem;
+}
+.mb-16 {
+  margin-bottom: 4rem;
+}
+.mb-20 {
+  margin-bottom: 5rem;
 }
 .block {
   display: block;
@@ -1005,6 +1017,10 @@ video {
   font-size: 3.75rem;
   line-height: 1;
 }
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -1033,6 +1049,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-\[\#592800\] {
+  --tw-text-opacity: 1;
+  color: rgb(89 40 0 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
@@ -1086,6 +1106,48 @@ video {
 }
 .drop-shadow-sm {
   --tw-drop-shadow: drop-shadow(0 1px 1px rgb(0 0 0 / 0.05));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
+    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
+    var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-\[0px_0\.5px_0\.5px_rgba\(15\2c 41\2c 1\2c 1\)\] {
+  --tw-drop-shadow: drop-shadow(0px 0.5px 0.5px rgba(15, 41, 1, 1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
+    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
+    var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-\[0px_5px_0\.5px_rgba\(15\2c 41\2c 1\2c 1\)\] {
+  --tw-drop-shadow: drop-shadow(0px 5px 0.5px rgba(15, 41, 1, 1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
+    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
+    var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-\[0px_2px_0\.5px_rgba\(15\2c 41\2c 1\2c 1\)\] {
+  --tw-drop-shadow: drop-shadow(0px 2px 0.5px rgba(15, 41, 1, 1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
+    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
+    var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-\[1px_2px_0\.5px_rgba\(15\2c 41\2c 1\2c 1\)\] {
+  --tw-drop-shadow: drop-shadow(1px 2px 0.5px rgba(15, 41, 1, 1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
+    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
+    var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-\[1px_1px_1px_rgba\(15\2c 41\2c 1\2c 1\)\] {
+  --tw-drop-shadow: drop-shadow(1px 1px 1px rgba(15, 41, 1, 1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
+    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
+    var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-\[0\.5px_0\.5px_1px_rgba\(15\2c 41\2c 1\2c 1\)\] {
+  --tw-drop-shadow: drop-shadow(0.5px 0.5px 1px rgba(15, 41, 1, 1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
+    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
+    var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-\[0\.5px_1px_1px_rgba\(15\2c 41\2c 1\2c 1\)\] {
+  --tw-drop-shadow: drop-shadow(0.5px 1px 1px rgba(15, 41, 1, 1));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
     var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
     var(--tw-sepia) var(--tw-drop-shadow);
