--- a/src/theme/Rules.css
+++ b/src/theme/Rules.css
@@ -1,9 +1,15 @@
+:root {
+  --glitter: url(../assets/images/common/silver-glitter-background.png);
+  --gradientPos: 50% 100%;
+}
+
 .rules-container {
   position: relative;
   max-width: 100%;
   margin: 0 auto;
   margin-bottom: 24px;
   color: #ffffff;
+  border-radius: 1.25rem;
 }
 
 .modal-rules {
@@ -14,29 +20,73 @@
       #0000008f 100%
     ),
     url(../assets/images/common/bg-sign.webp) center/cover no-repeat;
+  --height: 100%;
+}
+
+@media screen and (min-width: 798px) {
+  .modal-rules {
+    --height: 50%;
+  }
 }
 
 .rules-inner-wrapper {
-  width: 100%;
-  border-radius: 1.25rem;
-}
-
-.rules-title {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-items: center;
-  padding: 10px;
-  max-width: 100%;
-  width: 85%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
-.rules-description {
-  margin: 0 auto;
+.rules-title {
+  position: absolute;
+  top: 45%;
+  z-index: 1;
   max-width: 100%;
-  width: 85%;
+  width: 50%;
+  opacity: 0;
+  margin: 0 auto;
+  text-align: center;
+  animation: title 10s ease-out 0.1s;
+}
+
+.rules {
+  position: absolute;
+  top: auto;
+  bottom: 0;
+  height: 80em;
+  width: 90%;
+  font-size: 120%;
+  text-align: justify;
+  overflow: hidden;
+  transform-origin: 50% 100%;
+  transform: perspective(600px) rotateX(25deg);
+}
+
+@media screen and (min-width: 798px) {
+  .rules {
+    height: 50em;
+    font-size: 150%;
+    text-align: justify;
+    overflow: hidden;
+    transform-origin: 50% 100%;
+    transform: perspective(400px) rotateX(25deg);
+  }
+}
+
+.rules-description,
+.rules-actions {
+  position: relative;
+  top: 100%;
+  animation: description 60s linear 10s forwards;
+}
+
+.rules-description,
+.rules-actions {
+  margin: 0 auto;
   color: #ffffff;
-  padding: 10px;
 }
 
 .special-font {
@@ -50,4 +100,186 @@
 
 .rules-description ul ul {
   list-style-type: disc;
+}
+
+@keyframes title {
+  0% {
+    transform: scale(2);
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+}
+
+@keyframes description {
+  0% {
+    top: 100%;
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    top: 40%;
+    opacity: 0;
+  }
+}
+
+@keyframes bubble {
+  0% {
+    background-position:
+      0px 340px,
+      0px 130px,
+      var(--gradientPos);
+  }
+  100% {
+    background-position:
+      0px 0px,
+      0px 0px,
+      var(--gradientPos);
+  }
+}
+
+/* SPARKLES BUTTON */
+ion-button.sparkles {
+  --background: linear-gradient(
+    0deg,
+    rgb(14, 48, 0) 0%,
+    rgb(10, 36, 0) 5%,
+    rgb(6, 23, 0) 15%,
+    hsla(120, 10%, 0%) 40%,
+    hsla(120, 25%, 12%) 90%
+  );
+  --background-activated: linear-gradient(
+    0deg,
+    rgb(17, 59, 0) 0%,
+    rgb(13, 46, 0) 5%,
+    rgb(10, 38, 0) 15%,
+    rgb(1, 33, 0) 40%,
+    hsla(120, 25%, 12%) 90%
+  );
+  --border-radius: 5em;
+  --box-shadow: inset 0 0 2px hsla(120, 30%, 20%), 0 -0.5em 0.5em transparent,
+    0 0.5em 0.5em transparent, 0 0.5em 0.5em transparent,
+    0 0.5em 0.5em transparent, 0 0.25em 0.3em -0.2em hsla(120, 0%, 0%, 0.5),
+    0 0.35em 0.75em hsla(120, 0%, 0%, 0.75);
+  --padding-top: 1em;
+  --padding-bottom: 1em;
+  --padding-start: 1.5em;
+  --padding-end: 1.5em;
+  width: 9.375rem;
+  --color: rgb(214, 222, 226);
+  --transition: all 0.5s cubic-bezier(0.77, 0, 0.18, 1);
+  background-size: 200% 300%;
+  background-position: 0% 0%;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+ion-button.sparkles:hover {
+  --shadows: 90%;
+  --shadowl: 80%;
+  background-position: 100% 100%;
+  transition: all 0.2s cubic-bezier(0.17, 0.84, 0.44, 1);
+  border-radius: 5em;
+  box-shadow:
+    0 -0.2em 1.5em hsla(120, 100%, 14%, 0.3),
+    0 0.5em 2em hsla(120, 100%, 13%, 0.55),
+    0 0.25em 0.3em -0.2em hsla(120, 0%, 0%, 1),
+    0 0.35em 0.75em hsla(120, 0%, 0%, 1),
+    0 0.25em 0.5em -0.3em hsl(120, 30%, 99%, 1),
+    0 0.25em 0.5em hsla(120, 20%, 30%, 0.35),
+    inset 0 -2px 5px -2px rgba(255, 255, 255, 0.5);
+}
+
+ion-button.sparkles::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-image: var(--glitter), var(--glitter),
+    linear-gradient(180deg, black 0%, white 80%);
+  background-size:
+    300px 170px,
+    280px 130px,
+    200% 200%;
+  background-blend-mode: multiply, multiply, overlay;
+  background-position:
+    0px 0px,
+    0px 0px,
+    50% 100%;
+  mix-blend-mode: color-dodge;
+  filter: brightness(2) contrast(0.75);
+  animation: bubble 20s linear infinite;
+  border-radius: 5em;
+  opacity: 0.5;
+}
+
+ion-button.sparkles::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-image: radial-gradient(
+      ellipse at center 70%,
+      hsla(120, 100%, 99%, 0.8) 5%,
+      hsla(120, 90%, 80%, 1) 20%,
+      transparent 50%,
+      transparent 200%
+    ),
+    linear-gradient(
+      90deg,
+      hsla(120, 80%, 10%, 1) -10%,
+      transparent 25%,
+      transparent 75%,
+      hsla(120, 80%, 10%, 1) 110%
+    );
+  background-blend-mode: darken;
+  background-repeat: no-repeat;
+  background-size:
+    180% 80%,
+    cover;
+  background-position: center 220%;
+  mix-blend-mode: hard-light;
+  filter: blur(5px);
+  border-radius: 5em;
+  opacity: 0;
+}
+
+ion-button.sparkles:hover::after {
+  opacity: 0.8;
+}
+
+@keyframes bubble {
+  0% {
+    background-position:
+      0px 340px,
+      0px 130px,
+      50% 100%;
+  }
+  100% {
+    background-position:
+      0px 0px,
+      0px 0px,
+      50% 100%;
+  }
+}
+
+ion-button.sparkles span {
+  z-index: 2;
 }
