--- a/src/theme/tailwind.css
+++ b/src/theme/tailwind.css
@@ -591,6 +591,9 @@ video {
 .left-6 {
   left: 1.5rem;
 }
+.left-7 {
+  left: 1.75rem;
+}
 .left-8 {
   left: 2rem;
 }
@@ -611,9 +614,6 @@ video {
 }
 .top-\[60\%\] {
   top: 60%;
-}
-.left-7 {
-  left: 1.75rem;
 }
 .z-0 {
   z-index: 0;
@@ -678,6 +678,9 @@ video {
 }
 .block {
   display: block;
+}
+.inline {
+  display: inline;
 }
 .flex {
   display: flex;
@@ -805,6 +808,9 @@ video {
 .w-44 {
   width: 11rem;
 }
+.w-48 {
+  width: 12rem;
+}
 .w-56 {
   width: 14rem;
 }
@@ -825,9 +831,6 @@ video {
 }
 .w-screen {
   width: 100vw;
-}
-.w-48 {
-  width: 12rem;
 }
 .max-w-\[800px\] {
   max-width: 800px;
@@ -1331,11 +1334,19 @@ ion-toolbar {
   .md\:w-\[80\%\] {
     width: 80%;
   }
+
+  .md\:w-1\/2 {
+    width: 50%;
+  }
 }
 
 @media (min-width: 1024px) {
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .lg\:grid-cols-3 {
