--- a/src/theme/Animal.css
+++ b/src/theme/Animal.css
@@ -33,14 +33,16 @@ ion-card.animal-card {
   height: 50%;
   --background: url(../assets/images/common/letter.jpg) center/contain repeat;
 }
+
 ion-card.animal-game-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0;
   width: 100%;
   height: 100%;
-  flex-grow: 1;
+  flex: 1 1 auto;
   --background: url(../assets/images/common/letter.jpg) center/contain repeat;
   transition: all 0.5s ease;
 }
