--- a/src/theme/tailwind.css
+++ b/src/theme/tailwind.css
@@ -573,8 +573,8 @@ video {
 .bottom-0 {
   bottom: 0px;
 }
-.bottom-\[8\%\] {
-  bottom: 8%;
+.bottom-\[12\%\] {
+  bottom: 12%;
 }
 .left-1 {
   left: 0.25rem;
@@ -1307,20 +1307,12 @@ ion-toolbar {
 }
 
 @media (min-width: 768px) {
-  .md\:bottom-\[6\%\] {
-    bottom: 6%;
+  .md\:bottom-\[10\%\] {
+    bottom: 10%;
   }
 
   .md\:h-14 {
     height: 3.5rem;
-  }
-
-  .md\:h-\[60\%\] {
-    height: 60%;
-  }
-
-  .md\:min-h-\[60\%\] {
-    min-height: 60%;
   }
 
   .md\:w-14 {
@@ -1333,10 +1325,6 @@ ion-toolbar {
 
   .md\:w-\[80\%\] {
     width: 80%;
-  }
-
-  .md\:w-1\/2 {
-    width: 50%;
   }
 }
 
@@ -1365,6 +1353,10 @@ ion-toolbar {
 @media (min-width: 1280px) {
   .xl\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .xl\:w-1\/4 {
+    width: 25%;
   }
 
   .xl\:grid-cols-4 {
