--- a/src/theme/ItemCube.css
+++ b/src/theme/ItemCube.css
@@ -4,7 +4,7 @@
   min-height: 100%;
   min-width: 100%;
   padding: 0.5rem;
-  cursor: pointer;
+  cursor: grab;
 }
 
 .swiper-slide.item-slide {
@@ -21,8 +21,36 @@
     inset 1px 1px 5px rgb(188, 85, 1);
 }
 
+/* .swiper-slide.item-slide::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-image: var(--glitter), var(--glitter),
+    linear-gradient(180deg, black 0%, white 80%);
+  background-size:
+    300px 170px,
+    280px 130px,
+    200% 200%;
+  background-blend-mode: multiply, multiply, overlay;
+  background-position:
+    0px 0px,
+    0px 0px,
+    50% 100%;
+  mix-blend-mode: color-dodge;
+  filter: brightness(2) contrast(0.75);
+  animation: bubble 20s linear infinite;
+  border-radius: 5em;
+  opacity: 0.5;
+} */
+
 .swiper-slide.item-slide.color-slide {
-  background-image: url(../assets/images/common/wooden-frame.png);
+  background-image:
+    url(../assets/images/common/wooden-frame.png),
+    url(../assets/images/covers/color-cover.png) center/cover no-repeat;
 }
 
 .swiper-cube {
