--- a/src/theme/tailwind.css
+++ b/src/theme/tailwind.css
@@ -515,6 +515,21 @@ video {
 .container {
   width: 100%;
 }
+@media (min-width: 320px) {
+  .container {
+    max-width: 320px;
+  }
+}
+@media (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media (min-width: 580px) {
+  .container {
+    max-width: 580px;
+  }
+}
 @media (min-width: 640px) {
   .container {
     max-width: 640px;
@@ -698,6 +713,12 @@ video {
 .mt-4 {
   margin-top: 1rem;
 }
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
 .block {
   display: block;
 }
@@ -724,6 +745,9 @@ video {
 }
 .h-1\/2 {
   height: 50%;
+}
+.h-1\/3 {
+  height: 33.333333%;
 }
 .h-10 {
   height: 2.5rem;
@@ -770,8 +794,8 @@ video {
 .h-8 {
   height: 2rem;
 }
-.h-\[60\%\] {
-  height: 60%;
+.h-\[33\%\] {
+  height: 33%;
 }
 .h-auto {
   height: auto;
@@ -796,6 +820,9 @@ video {
 }
 .w-1\/2 {
   width: 50%;
+}
+.w-1\/3 {
+  width: 33.333333%;
 }
 .w-11 {
   width: 2.75rem;
@@ -842,8 +869,8 @@ video {
 .w-8 {
   width: 2rem;
 }
-.w-\[60\%\] {
-  width: 60%;
+.w-\[33\%\] {
+  width: 33%;
 }
 .w-auto {
   width: auto;
@@ -1048,6 +1075,15 @@ video {
 .overflow-hidden {
   overflow: hidden;
 }
+.text-wrap {
+  text-wrap: wrap;
+}
+.break-words {
+  overflow-wrap: break-word;
+}
+.break-all {
+  word-break: break-all;
+}
 .border-dashed {
   border-style: dashed;
 }
@@ -1132,9 +1168,17 @@ video {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 .font-bold {
   font-weight: 700;
@@ -1144,6 +1188,9 @@ video {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.lowercase {
+  text-transform: lowercase;
 }
 .italic {
   font-style: italic;
@@ -1193,17 +1240,17 @@ video {
 .opacity-0 {
   opacity: 0;
 }
-.opacity-100 {
-  opacity: 1;
-}
-.opacity-50 {
-  opacity: 0.5;
-}
 .opacity-10 {
   opacity: 0.1;
 }
+.opacity-100 {
+  opacity: 1;
+}
 .opacity-20 {
   opacity: 0.2;
+}
+.opacity-50 {
+  opacity: 0.5;
 }
 .outline {
   outline-style: solid;
@@ -1217,12 +1264,6 @@ video {
 .drop-shadow {
   --tw-drop-shadow: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1))
     drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
-    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
-    var(--tw-sepia) var(--tw-drop-shadow);
-}
-.drop-shadow-\[0\.5px_1px_1px_rgba\(15\2c 41\2c 1\2c 1\)\] {
-  --tw-drop-shadow: drop-shadow(0.5px 1px 1px rgba(15, 41, 1, 1));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
     var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
     var(--tw-sepia) var(--tw-drop-shadow);
@@ -1348,6 +1389,31 @@ ion-toolbar {
   --border-color: transparent;
 }
 
+.base-style {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  padding: 0.5rem;
+}
+
+.text-shadow-base {
+  letter-spacing: 0.025em;
+  --tw-drop-shadow: drop-shadow(0.5px 1px 1px rgba(0, 0, 0, 1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
+    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
+    var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.first-letter\:font-bold::first-letter {
+  font-weight: 700;
+}
+
+.first-letter\:text-red-700::first-letter {
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
+}
+
 .hover\:translate-y-1:hover {
   --tw-translate-y: 0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y))
@@ -1369,17 +1435,53 @@ ion-toolbar {
     scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+@media (min-width: 320px) {
+  .xs\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 480px) {
+  .x\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .x\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .x\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 580px) {
+  .s\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:left-\[60\%\] {
     left: 60%;
   }
 
-  .sm\:h-1\/2 {
-    height: 50%;
+  .sm\:h-1\/3 {
+    height: 33.333333%;
   }
 
-  .sm\:w-1\/2 {
-    width: 50%;
+  .sm\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -1427,6 +1529,10 @@ ion-toolbar {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .lg\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
@@ -1437,6 +1543,16 @@ ion-toolbar {
 
   .lg\:gap-10 {
     gap: 2.5rem;
+  }
+
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .lg\:text-6xl {
@@ -1456,5 +1572,14 @@ ion-toolbar {
 
   .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
